# ttplayer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
installer/: TTPlayerClassic.wixproj  TTPlayerClassic.wxs
resources/: app.rc  resource.h
skins/: 3、TT-07_随身听 (蓝+黑).skn
src/: audio_engine.cpp  audio_engine.h  desktop_lyric_model.cpp  desktop_lyric_model.h  equalizer_model.cpp  equalizer_model.h  lyric_mode.cpp  lyric_mode.h  main.cpp  playlist_model.cpp  playlist_model.h  skin_definition.cpp  skin_definition.h  skin_package.cpp  skin_package.h  skin_selection.cpp  skin_selection.h  window_layout.cpp  window_layout.h
tests/: test_skin_package.cpp
